# bazel-experiments

./: README.md
cpp/stage1/: README.md  bazel-bin  bazel-out  bazel-stage1  bazel-testlogs
cpp/stage1/main/: BUILD  hello-world.cc
cpp/stage2/: README.md  bazel-bin  bazel-out  bazel-stage2  bazel-testlogs
cpp/stage2/main/: BUILD  hello-greet.cc  hello-greet.h  hello-world.cc
cpp/stage3/: README.md  bazel-bin  bazel-out  bazel-stage3  bazel-testlogs
cpp/stage3/lib/: BUILD  hello-time.cc  hello-time.h
cpp/stage3/main/: BUILD  hello-greet.cc  hello-greet.h  hello-world.cc
go/: BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-go  bazel-out  bazel-testlogs
python/: WORKSPACE
python-go/: WORKSPACE  bazel-bin  bazel-out  bazel-python-go  bazel-testlogs
python-go/python/: BUILD  hello-world.py  test.py
python/src/: BUILD
